<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_1">The Glide repository is downloaded!</string>
    <string name="notification_description_2">The Project 3 repository is downloaded!</string>
    <string name="notification_description_3">The Retrofit repository is downloaded!</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Step 1: Create a radio list of the following options where one of them can be selected for downloading. -->
    <!-- 1.1: Create strings for radio buttons name! -->
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <!-- Step 5: If there is no selected option, display a Toast to let the user know to select one. -->
    <!-- 5.1: Create a string for the toast message! -->
    <string name="no_selection_message">Please select the file to download</string>
    <string name="no_network_message">The network is not connected</string>

    <!-- Step 8: Create the details screen and display the name of the repository and status of the download! -->
    <!-- 8.1: Create strings for its elements! -->
    <string name="content_detail_button">OK</string>
    <string name="file_name">File Name:</string>
    <string name="download_status">Status:</string>
    <string name="status_detail">Fail</string>
</resources>