<?xml version="1.0" encoding="utf-8"?>

<!-- Step 8: Create the details screen and display the name of the repository and status of the download! -->
<!-- Step 9: Use declarative XML with motionLayout to coordinate animations across the views on the detail screen!  -->
<!-- Step 10: Add a button to the detail screen to return back to the main screen! -->
<!-- 8.2: Create the xml file! -->
<!-- 9.1: Change the constraint layout to motion layout! -->
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TextView
        android:id="@+id/file_name_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/content_detail_text_top_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:text="@string/file_name"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/file_name_text_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        android:text="@string/glide_text"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/file_name_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/file_name_text" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/download_status"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="@+id/file_name_text"
        app:layout_constraintStart_toStartOf="@+id/file_name_text"
        app:layout_constraintTop_toBottomOf="@+id/file_name_text_detail" />

    <TextView
        android:id="@+id/status_text_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/status_detail"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="@id/file_name_text_detail"
        app:layout_constraintStart_toStartOf="@+id/file_name_text_detail"
        app:layout_constraintTop_toBottomOf="@+id/file_name_text_detail" />

    <!-- 10.1: Add the OK button! -->
    <Button
        android:id="@+id/ok_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/content_detail_button"
        android:textSize="@dimen/default_text_size"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>