<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/cloud_computing"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/cloudcomputing"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radio_group" />

    <!-- Step 1: Create a radio list of the following options where one of them can be selected for downloading. -->
    <!-- 1.3: Create a radio group and put inside it the needed radio buttons! -->
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloud_computing"
        app:layout_constraintBottom_toTopOf="@id/custom_button">

        <RadioButton
            android:id="@+id/glide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/glide_text"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/load_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/load_app_text"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/radio_button_margin"
            android:onClick="onRadioButtonClicked"
            android:text="@string/retrofit_text"
            android:textSize="@dimen/default_text_size" />

    </RadioGroup>

    <!-- 2.6.2.2: Add the states color to the button! -->
    <!-- Note: Reuse the DialView code in the lesson 2! -->
    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="@dimen/loading_button_height"
        android:layout_margin="@dimen/loading_button_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:buttonColor="@color/colorPrimary"
        app:loadingBackgroundColor="@color/colorPrimaryDark"
        app:loadingCircleColor="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>